--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,7 @@ h1, h2, h3, h4, p {
     border: 6px solid white;
     border-radius: 10px;
     background-image: url("images/gift-cover.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #gift-img-happy:hover {
@@ -68,7 +67,10 @@ h1, h2, h3, h4, p {
 }
 
 #gift-img-hot:hover {
-    background-image: url(images/giphy1.gif)
+    background-image: url(images/giphy1.gif);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 200px ; 
 }
 
 #gift-img-genius:hover {
@@ -92,15 +94,3 @@ h1, h2, h3, h4, p {
 a {
     color: white;
 }
-
-/* 
-Add the footer paragraph according to the design. 
-Configure the anchor tag to open the link in a new tab.
-Forgotten how to do it? Google it! 
-
-Link: 
-https://scrimba.com/learn/htmlandcss
-
-Text:
-Want to create your own Birthday GIFt site? Take this HTML & CSS course.
-*/
