--- a/styles.css
+++ b/styles.css
@@ -66,11 +66,13 @@ h1, h2, h3, h4, p {
     background-image: url("images/giphy.gif");
 }
 
-#gift-img-hot:hover {
-    background-image: url(images/giphy1.gif);
+#gift-img-hot{
     background-size: contain;
     background-repeat: no-repeat;
-    height: 200px ; 
+    height: 200px ;
+}
+#gift-img-hot:hover {
+    background-image: url(images/giphy1.gif); 
 }
 
 #gift-img-genius:hover {
