--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ h1, h2, h3, h4, p {
     background-size: contain;
     background-repeat: no-repeat;
     height: 200px ;
+    width: 300px ;
 }
 #gift-img-hot:hover {
     background-image: url(images/giphy1.gif); 
@@ -85,6 +86,8 @@ h1, h2, h3, h4, p {
 
 #gift-img-cheers:hover {
     background-image: url("images/giphy3.gif");
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 #footer {
