--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family: 'Happy Monkey', cursive;
-    background: linear-gradient(blue, green);
+    background: linear-gradient(#ffba08, #9d0208);
     color: #ffffff;
 }
 
